--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
   </head>
 
   <body>
+    <div class="container-loading">
+      <div class="cloud front">
+        <span class="left-front"></span>
+        <span class="right-front"></span>
+      </div>
+      <span class="sun sunshine"></span>
+      <span class="sun"></span>
+      <div class="cloud back">
+        <span class="left-back"></span>
+        <span class="right-back"></span>
+      </div>
+    </div>
     <main>
       <div class="container text-white">
         <!-- Start NavBar  -->
