--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </head>
 
   <body>
+    <!-- Start Loading -->
     <div class="container-loading">
       <div class="cloud front">
         <span class="left-front"></span>
@@ -42,6 +43,7 @@
         <span class="right-back"></span>
       </div>
     </div>
+    <!-- Start Loading -->
     <main>
       <div class="container text-white">
         <!-- Start NavBar  -->
